# finance_helper

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
app/: main.py
app/api/: router.py
app/api/endpoints/: transaction.py
app/api/graphql/: schema.py
app/core/: config.py
app/crud/: transaction.py  unit.py
app/db/: base.py
app/graphql/: schema.py
app/models/: __init__.py  payments.py
app/schemas/: payments.py
app/utils/: case.py
db_schemas/: env.py
db_schemas/versions/: 65eaf9a5cf48_init.py  662ce97e3984_init.py  677a2d815ea4_init.py  a382d7029240_init.py  c767713ec998_init.py
